@@ -648,7 +648,7 @@ void PfDrawManager::addDisplay(Display* disp)
 }
 
 /*
-#ifndef VPR_OS_Win32
+#ifndef VPR_OS_Windows
 void PfDrawManager::createEmptyCursor(::Display* display, ::Window root)
 {
    Pixmap cursormask;
@@ -683,7 +683,7 @@ void PfDrawManager::createEmptyCursor(::Display* display, ::Window root)
 void PfDrawManager::removeDisplay(Display* disp)
 {
    // Find the pfDisplay
-#ifdef VPR_OS_Win32
+#ifdef VPR_OS_Windows
    // Visual C++ does not have std::compose1(), so we have to do this the
    // tedious, non-template-coolness way.
    std::vector<pfDisplay>::iterator disp_i;
@@ -875,7 +875,7 @@ std::vector<int> PfDrawManager::getMonoFBConfig(vrj::Display* disp)
    std::vector<int> app_fb = mApp->getFrameBufferAttrs();
    mono_fb.insert(mono_fb.end(), app_fb.begin(), app_fb.end());
 
-#ifdef VPR_OS_Win32
+#ifdef VPR_OS_Windows
    mono_fb.push_back(0);
 #else
    mono_fb.push_back(None);
@@ -897,7 +897,7 @@ std::vector<int> PfDrawManager::getStereoFBConfig(vrj::Display* disp)
    std::vector<int> app_fb = mApp->getFrameBufferAttrs();
    stereo_fb.insert(stereo_fb.end(), app_fb.begin(), app_fb.end());
 
-#ifdef VPR_OS_Win32
+#ifdef VPR_OS_Windows
    stereo_fb.push_back(0);
 #else
    stereo_fb.push_back(None);
